CFL downsync implementation by view